<resources>
    <string name="app_name">Aldi Apps-10116065</string>
    <string name="haluuu_world">haluuu world</string>
    <string name="heading">Heading</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="next">Next</string>
    <string name="back">Button</string>
    <string name="title_activity_home2">home2</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="propil"></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    \\string fragment home
    <string name="nama">Aldi Muhammad Syafi</string>
    <string name="desc">Dulu bercita-cita jadi tentara sekarang menjadi frontend developer why not combine it </string>
    <string name="hobby">Hobby</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
