<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="347dp"
        android:layout_height="210dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:clickable="true"
        app:cardCornerRadius="10dp"
        app:cardElevation="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageView2"
            android:layout_width="136dp"
            android:layout_height="106dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="110dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:contentDescription="@string/propil"
            android:src="@drawable/profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textVie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="110dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/nama"
            android:textColor="@color/fragment_color"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/circleImageView" />


        <EditText
            android:id="@+id/editTex"
            android:layout_width="match_parent"
            android:layout_height="19dp"
            android:layout_marginTop="135dp"
            android:backgroundTint="@color/fragment_color"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName"
            android:text="@string/nama"
            tools:layout_editor_absoluteX="61dp"
            tools:layout_editor_absoluteY="241dp" />

        <TextView
            android:id="@+id/textVi"
            android:layout_width="227dp"
            android:layout_height="57dp"
            android:layout_gravity="start"
            android:layout_marginStart="70dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="145dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:gravity="center"
            android:text="@string/desc"
            android:textColor="@color/fragment_color"
            tools:layout_editor_absoluteX="123dp"
            tools:layout_editor_absoluteY="175dp" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="346dp"
        android:layout_height="105dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">


        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="82dp"
            android:text="Instagram"
            android:textColor="@color/fragment_color" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="153dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="82dp"
            android:text="Twitter"
            android:textColor="@color/fragment_color" />

        <ImageButton
            android:id="@+id/instagram"
            android:layout_width="80dp"
            android:layout_height="65dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@android:color/transparent"
            android:onClick="ig"
            android:src="@drawable/instagram" />


        <ImageButton
            android:id="@+id/twitter"
            android:layout_width="80dp"
            android:layout_height="65dp"
            android:layout_marginStart="135dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@android:color/transparent"
            android:onClick="twitter"
            android:src="@drawable/twitter" />

        <ImageButton
            android:id="@+id/maps"
            android:layout_width="80dp"
            android:layout_height="65dp"
            android:layout_marginStart="245dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="10dp"
            android:onClick="map"
            android:src="@drawable/map" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="265dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="82dp"
            android:text="Lokasi" />


    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/button_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="184dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@android:color/transparent"
        android:elevation="100dp"
        android:text="About"
        android:textColor="@color/fragment_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView4" />

</android.support.constraint.ConstraintLayout>