<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="347dp"
        android:layout_height="210dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:clickable="true"
        app:cardCornerRadius="10dp"
        app:cardElevation="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageView"
            android:layout_width="136dp"
            android:layout_height="106dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="110dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:contentDescription="@string/propil"
            android:src="@drawable/profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="110dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/nama"
            android:textColor="@color/fragment_color"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/circleImageView" />


        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="19dp"
            android:layout_marginTop="135dp"
            android:backgroundTint="@color/fragment_color"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName"
            android:text="@string/nama"
            tools:layout_editor_absoluteX="61dp"
            tools:layout_editor_absoluteY="241dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="227dp"
            android:layout_height="57dp"
            android:layout_gravity="start"
            android:layout_marginStart="70dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="145dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:gravity="center"
            android:text="@string/desc"
            android:textColor="@color/fragment_color"
            tools:layout_editor_absoluteX="123dp"
            tools:layout_editor_absoluteY="175dp" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="342dp"
        android:layout_height="144dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:text="@string/hobby"
            android:textColor="@color/fragment_color"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="87dp"
            android:layout_height="69dp"
            android:layout_marginStart="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="30dp"
            app:srcCompat="@drawable/destination" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="100dp"
            android:text="Touring"
            android:textColor="@color/fragment_color" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="87dp"
            android:layout_height="69dp"
            android:layout_marginStart="140dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="30dp"
            app:srcCompat="@drawable/piston" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="145dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="100dp"
            android:text="Motorcycle"
            android:textColor="@color/fragment_color" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="87dp"
            android:layout_height="69dp"
            android:layout_marginStart="240dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="30dp"
            app:srcCompat="@drawable/game" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="265dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="100dp"
            android:text="Game"
            android:textColor="@color/fragment_color" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="342dp"
        android:layout_height="144dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">


        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:text="Interest"
            android:textColor="@color/fragment_color"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="30dp"
            app:srcCompat="@drawable/opor" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="95dp"
            android:text="Opor Ayam"
            android:textColor="@color/fragment_color" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_marginStart="90dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="30dp"
            app:srcCompat="@drawable/alpuket" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="95dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="95dp"
            android:text="Jus Alpukat"
            android:textColor="@color/fragment_color" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_marginStart="180dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="30dp"
            app:srcCompat="@drawable/esport" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="195dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="95dp"
            android:text="Esports"
            android:textColor="@color/fragment_color" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_marginStart="267dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="30dp"
            app:srcCompat="@drawable/gp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="279dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="95dp"
            android:text="Moto GP"
            android:textColor="@color/fragment_color" />
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>